--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x7fe2fb16b050>"
+       "<zip at 0x7fdb3aa6ff50>"
       ]
      },
      "execution_count": 2,
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "634"
+       "625"
       ]
      },
      "execution_count": 5,
